# streamlit-conn

./: README.md  main.py  pyproject.toml
.streamlit/: secrets.example.toml
connections/: weaviate_connection.py
